--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "alotl-media",
+  "name": "media-share",
   "version": "1.0.0",
   "description": "Centralized platform for sharing recommendations and ratings for all media types with friends",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/server.js",
     "build": "webpack",
-    "dev": "webpack serve",
+    "dev": "concurrently \"webpack serve\" \"npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-postgres": "^0.6.2",
     "pg": "^8.7.3",
@@ -39,21 +40,22 @@
     "webpack-hot-middleware": "^2.25.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
     "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
+    "babel-loader": "^8.3.0",
+    "concurrently": "^8.2.2",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.6.0",
     "nodemon": "^2.0.16",
     "postcss-loader": "^6.2.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "source-map-loader": "^3.0.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
